# Datawrapper

./: .clinerules  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.md  README.rst  SECURITY.md  cookiecutter-config-file.yml  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  scratch.py  setup.cfg  setup.py  tox.ini
.binder/: requirements.txt
.devcontainer/: devcontainer.json  setup.sh
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  continuous-deployment.yml  docs.yml  greetings.yml  main.yml  manual-deployment.yml  publish.yml  safety.yml  test.yml
2026-roadmap/: 00-moonshot.md  01-complete-chart-type-coverage.md  02-async-api-client.md  03-http-performance-layer.md  04-legacy-api-sunset.md  05-batch-operations-framework.md  06-command-line-interface.md  07-plugin-architecture.md  08-data-pipeline-integration.md  09-interactive-gallery-builder.md  10-real-time-charts.md  README.md
datawrapper/: __init__.py  __main__.py  chart_factory.py  cli.py  datawrapper.py  example.py  exceptions.py  flags.py
datawrapper/charts/: __init__.py  annos.py  area.py  arrow.py  bar.py  base.py  choropleth_map.py  column.py  enums.py  line.py  mixins.py  models.py  multiple_column.py  scatter.py  serializers.py  stacked_bar.py  table.py
datawrapper/charts/enums/: __init__.py  annos.py  basemap_projection.py  border_width.py  color_mode.py  color_scale.py  connector_line.py  date_format.py  grid_display.py  grid_label.py  interpolation.py  line_dash.py  line_width.py  number_divisor.py  number_format.py  pagination.py  plot_height.py  replace_flags.py  scatter_shape.py  symbol_shape.py  text_align.py  value_label.py
datawrapper/charts/models/: __init__.py  api_sections.py  mixins.py  range_annotations.py  table_column.py  table_heatmap.py  table_mini_chart.py  table_row.py  table_text_style.py  text_annotations.py  transforms.py
datawrapper/charts/serializers/: __init__.py  base.py  color_category.py  custom_range.py  custom_ticks.py  model_list.py  negative_color.py  pagination.py  plot_height.py  replace_flags.py  value_labels.py
docker/: README.md
docs/: Makefile  _config.yml  authors.md  conf.py  contributing.md  history.md  index.md  index.rst  installation.md  installation.rst  make.bat  requirements.txt  usage.md  usage.rst
docs/_ext/: enum_table.py  parameter_table.py
docs/_templates/: class.md
docs/about/: API.rst  authors.md  contributing.md  history.md
docs/user-guide/: advanced-api.md  api.rst  chart-operations.md  quickstart.md  usage.ipynb  usage.md
docs/user-guide/advanced/: authentication-and-account.md  chart-operations.md  exporting.md  organization.md
docs/user-guide/api/: chart-classes.rst  enums.rst  exceptions.rst  main-client.rst  mixins.rst  models.rst
docs/user-guide/charts/: area-charts.md  arrow-charts.md  bar-charts.md  column-charts.md  line-charts.md  multiple-column-charts.md  scatter-plots.md  stacked-bar-charts.md  tables.md
examples/: basics.ipynb  datawrapper.ipynb  date_format_demo.py  number_format_demo.py
scripts/: README.md  cleanup_test_workspaces.py
tests/: area_markers.json  conftest.py  test_api_tokens.py  test_basemaps.py  test_datawrapper.py  test_display_urls.py  test_exceptions.py  test_folders.py  test_get_auth_header.py  test_login_tokens.py  test_maps.py  test_me.py  test_oembed.py  test_river.py  test_teams.py  test_themes.py  test_token_scopes.py  test_users.py  test_workspaces.py
tests/functional/: README.md  __init__.py  test_api_end_to_end.py  test_api_mock.py  test_api_tokens.py  test_base_chart_operations.py  test_basemaps.py  test_chart_factory.py  test_datawrapper.py  test_display_urls.py  test_end_to_end.py  test_exceptions.py  test_folders.py  test_get_auth_header.py  test_login_tokens.py  test_main_coverage.py  test_maps.py  test_me.py  test_oembed.py  test_river.py  test_teams.py  test_themes.py  test_token_scopes.py  test_users.py  test_workspaces.py
tests/integration/: __init__.py  test_area_chart.py  test_arrow_chart.py  test_bar_annotations.py  test_bar_axes_structure.py  test_base_api_integration.py  test_base_display.py  test_base_export.py  test_base_metadata_structure.py  test_base_serialization.py  test_chart_creation.py  test_chart_get_method.py  test_column_chart.py  test_column_format_list_number_divisor.py  test_line_chart.py  test_multiple_column_chart.py  test_multiple_column_sample_annotations.py  test_multiple_column_text_annotation.py  test_sample_charts.py  test_scatter_annotations.py  test_scatter_chart.py  test_stacked_bar_chart.py  test_table.py
tests/samples/area/: migration.csv  migration.json  plastic.csv  plastic.json  population.csv  population.json  tate.csv  tate.json
tests/samples/arrow/: babies.csv  babies.json  english.csv  english.json  ev.csv  ev.json  inequality.csv  inequality.json
tests/samples/bar/: european-turnout.json  happiness-scores.csv  happiness-scores.json
tests/samples/column/: claims.csv  claims.json  payrolls.csv  payrolls.json  unemployment.csv  unemployment.json
tests/samples/line/: cigarettes.csv  cigarettes.json  covid.csv  covid.json  crypto.csv  crypto.json  land-temps.csv  land-temps.json
tests/samples/multiple_column/: jobs.csv  jobs.json  population.csv  population.json  social-media.csv  social-media.json  uk-spending.csv  (+1 more)
tests/test_datawrapper/: __init__.py
tests/test_example/: test_hello.py
tests/unit/: __init__.py  test_area_fill_opacity_validator.py  test_bar_category_config.py  test_base_chart_warnings.py  test_connector_line_circle_style_validator.py  test_enum_backwards_compatibility.py  test_enum_imports.py  test_flags.py  test_multiple_column_range_annotation_subclasses.py  test_plot_height_mode_enum.py  test_range_annotation_subclasses.py  test_text_align_enum.py  test_text_annotation_width_validator.py
tests/utils/: __init__.py  dict_comparison.py
(+57 files in other folders)
